Fixed some mobile design layout issues

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,6 +31,11 @@
   padding-top: 10px;
 }
 
+.navbar-custom {
+  background-color: #ffffff;
+  border-color: #ffffff;
+}
+
 // .container {
 //   margin-left: 135px
 // }
